--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,62 @@
 h1 {
   text-align: center;
 }
+
+a {
+  background-color: green;
+  padding: 10px;
+  color: blue;
+  font-weight: bold;
+  text-decoration-line: none;
+}
+
+.View {
+  position: relative;
+  top: 10px;
+  width: 60%;
+  border: 2px solid green;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+.MonthViewTotal {
+  position: absolute;
+  right: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid black;
+}
+
+th {
+  padding: 5px;
+  text-align: left;
+}
+
+td {
+  border-top: 1px solid lightgrey;
+  padding: 5px;
+}
+
+input {
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+button {
+  background-color: green;
+  border: 0;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+}
+button:active {
+  background-color: darkgreen;
+}
