--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 
 h1 {
   text-align: center;
+  margin: 20px 0 30px;
 }
 
 a {
@@ -21,21 +22,24 @@ a {
 }
 
 .View {
-  position: relative;
-  top: 10px;
+  margin: 10px 20px 20px;
   width: 60%;
   border: 2px solid green;
   border-radius: 20px;
-  padding: 20px;
+  padding: 5px 20px 20px;
 }
 
 h2 {
-  margin-top: 0;
+  background-color: rgb(200, 255, 200);
+  padding: 10px 0;
+  margin: 0 0 5px;
+  position: sticky;
+  top: 0;
 }
 
 .MonthViewTotal {
   position: absolute;
-  right: 20px;
+  right: 0;
 }
 
 table {
@@ -52,6 +56,10 @@ th {
 td {
   border-top: 1px solid lightgrey;
   padding: 5px;
+}
+
+.AlignRight {
+  text-align: right;
 }
 
 input {
