--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,14 @@ h1 {
 }
 
 a {
+  color: blue;
+  text-decoration-line: none;
+}
+
+.NavItem {
   background-color: green;
   padding: 10px;
-  color: blue;
   font-weight: bold;
-  text-decoration-line: none;
 }
 
 .View {
